--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
         architecture: 'x64'
     - name: Install the ffmpeg dependency
       run: |
+        sudo apt-get update
         sudo apt install ffmpeg
     - name: Install the library
       run: |
